--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Thông tin Open Graph cho ảnh đại diện -->
-    <!-- <meta property="og:image" content="https://yenstudio.com.vn/ninh-hong.jpg" /> -->
+    <meta property="og:image" content="https://yenstudio.com.vn/ninh-hong.jpg" />
     <meta property="og:image:width" content="600" /> <!-- Chiều rộng ảnh đại diện -->
     <meta property="og:image:height" content="300" /> <!-- Chiều cao ảnh đại diện -->
 
     <!-- Các thông tin khác cho Open Graph -->
     <meta property="og:title" content="NINH - HỒNG" />
     <meta property="og:description" content="HẢI NINH - NGUYÊN HỒNG" />
-    <!-- <meta property="og:url" content="https://yenstudio.com.vn/ninh-hong/thiepmoi.html" /> -->
+    <meta property="og:url" content="https://yenstudio.com.vn/ninh-hong/thiepmoi.html" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="./ninh-hong/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -161,9 +161,9 @@
                 </div>
             </div>
             <div class="box-til2">
-                <label for="" class="zoom-in til2">BEING WITH YOU AND NOT <br>
-                    BEING WITH YOU IS THE ONLY WAY <br>
-                    I HAVE TO MEASURE TIME</label>
+                <label for="" class="zoom-in til2">Anh chẳng ngại đường dài phía trước <br>
+                    Là ngày bên em, những con phố <br>
+                    Có hoa bay bao sắc màu</label>
             </div>
             <div class="box-image">
                  <img src="./ninh-hong/anh/pic4-02.png" alt="" class="fade-up imge">
