--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -61,7 +61,7 @@
             </div>
             <div class="third">
                 <label for="" class="fade-down kinhmoi">TRÂN TRỌNG KÍNH MỜI ANH/CHỊ/BẠN <br>
-                    ĐẾN DỰ BỮA CƠM THÂN MẬT MỪNG LỄ BÁO HỶ CỦA <strong>NINH & HỒNG</strong> TẠI:</label>
+                    ĐẾN DỰ BUỔI TIỆC THÂN MẬT MỪNG LỄ BÁO HỶ CỦA <strong>NINH & HỒNG</strong> TẠI:</label>
             </div>
             <div class="box-wp">
                 <label for="" class="zoom-in wp">Thiên Trang Palace</label>
@@ -74,6 +74,7 @@
             <div class="fade-down box-time">
                 <label for="" class="time1">VÀO NGÀY</label>
                 <label for="" class="time2">15.03.2025</label>
+                <label for="" class="time1"><i>/ Nhằm ngày 16 tháng 2 năm 2025 (Âm lịch) /</i></label>
             </div>
             <div class="vertical-line">
                 <div class="line"></div> 
