--- a/thiepmoi.html
+++ b/thiepmoi.html
@@ -42,8 +42,8 @@
                 <img src="./ninh-hong/anh/n-h-02.png" alt="" class="img-logo">
             </div>
              <div class="title">
-                <label for="" class="lb-til">TRÂN TRỌNG KÍNH MỜI BẠN<br>
-                    DÀNH THỜI GIAN ĐẾN THAM DỰ LỄ BẢO HỶ CỦA</label>
+                <label for="" class="lb-til">TRÂN TRỌNG KÍNH MỜI QUÝ KHÁCH<br>
+                    DÀNH THỜI GIAN ĐẾN THAM DỰ LỄ BÁO HỶ CỦA</label>
                     <label for="" class="lb-name">Hải Ninh & Nguyên Hồng</label>
              </div>
             <div class="box-img1">
@@ -97,13 +97,13 @@
               <!-- Slider container -->
               <div class="slider">
                 <div class="slide">
+                    <img src="./ninh-hong/anh/3.webp" alt="" />
+                </div>
+                <div class="slide">
                 <img src="./ninh-hong/anh/1.webp" alt="" />
                 </div>
                 <div class="slide">
                     <img src="./ninh-hong/anh/2.webp" alt="" />
-                </div>
-                <div class="slide">
-                    <img src="./ninh-hong/anh/3.webp" alt="" />
                 </div>
                 <div class="slide">
                     <img src="./ninh-hong/anh/4.webp" alt="" />
@@ -133,7 +133,7 @@
             </div>
 
             <div class="top-line">
-                <label for="" class="fade-up lb-line">FROM TINDER TO TINDER</label>
+                <label for="" class="fade-up lb-line">FROM TINDER TO TENDER</label>
             </div>
             <div class="vertical-line">
                 <div class="line"></div> 
@@ -273,7 +273,7 @@
 
                         Swal.fire({
                             title: 'Thành công',
-                            text: 'Cảm ơn bạn dã gửi phản hồi, thông tin đã được gửi đến dâu rể rồi nhaa <3',
+                            text: 'Cảm ơn bạn đã gửi phản hồi, thông tin đã được gửi đến dâu rể rồi nhaa <3',
                             imageWidth: 300,
                             imageHeight: 200,
                             confirmButtonText: 'ĐÓNG',
